@@ -536,6 +536,10 @@ typedef struct Homeland {
         
         char changed;
         
+        // did the creation of this homeland tapout-trigger
+        // a +primaryHomeland object?
+        char primary;
+        
     } Homeland;
 
 
@@ -580,10 +584,10 @@ static Homeland *getHomeland( int inX, int inY,
 
 
 
-static char hasHomeland( int inLineageEveID ) {
+static char hasPrimaryHomeland( int inLineageEveID ) {
     for( int i=0; i<homelands.size(); i++ ) {
         Homeland *h = homelands.getElement( i );
-        if( h->lineageEveID == inLineageEveID ) {
+        if( h->primary && h->lineageEveID == inLineageEveID ) {
             return true;
             }
         }
@@ -6739,13 +6743,16 @@ static int neighborWallAgree( int inX, int inY, ObjectRecord *inSetO,
     
 
 
-
-static void runTapoutOperation( int inX, int inY, 
+// returns true if tapout-triggered a +primaryHomeland object
+static char runTapoutOperation( int inX, int inY, 
                                 int inRadiusX, int inRadiusY,
                                 int inSpacingX, int inSpacingY,
                                 int inTriggerID,
-                                char inPlayerHasHomeland,
+                                char inPlayerHasPrimaryHomeland,
                                 char inIsPost = false ) {
+
+    char returnVal = false;
+    
     for( int y =  inY - inRadiusY; 
          y <= inY + inRadiusY; 
          y += inSpacingY ) {
@@ -6828,14 +6835,19 @@ static void runTapoutOperation( int inX, int inY,
                 }
 
             if( newTarget != -1 ) {
-                if( inPlayerHasHomeland ) {
-                    // block creation of objects that require +primaryHomeland
-                    // player already has a homeland
-                    ObjectRecord *nt = getObject( newTarget );
+                ObjectRecord *nt = getObject( newTarget );
+                
+                if( strstr( nt->description, "+primaryHomeland" ) != NULL ) {
+                    if( inPlayerHasPrimaryHomeland ) {
+                        // block creation of objects that require 
+                        // +primaryHomeland
+                        // player already has a primary homeland
                     
-                    if( strstr( nt->description, 
-                                "+primaryHomeland" ) != NULL ) {
                         newTarget = -1;
+                        }
+                    else {
+                        // created a +primaryHomeland object
+                        returnVal = true;
                         }
                     }
                 }
@@ -6845,6 +6857,8 @@ static void runTapoutOperation( int inX, int inY,
                 }
             }
         }
+    
+    return returnVal;
     }
 
 
@@ -6881,7 +6895,9 @@ void setMapObjectRaw( int inX, int inY, int inID ) {
         o = getObject( inID );
         }
 
-
+    
+    char tappedOutPrimaryHomeland = false;
+    
 
     if( o->isFlightLanding ) {
         GridPos p = { inX, inY };
@@ -7113,7 +7129,7 @@ void setMapObjectRaw( int inX, int inY, int inID ) {
     else if( o->isTapOutTrigger ) {
         // this object, when created, taps out other objects in grid around
 
-        char playerHasHomeland = false;
+        char playerHasPrimaryHomeland = false;
         
         if( currentResponsiblePlayer != -1 ) {
             int pID = currentResponsiblePlayer;
@@ -7123,7 +7139,7 @@ void setMapObjectRaw( int inX, int inY, int inID ) {
             int lineage = getPlayerLineage( pID );
             
             if( lineage != -1 ) {
-                playerHasHomeland = hasHomeland( lineage );
+                playerHasPrimaryHomeland = hasPrimaryHomeland( lineage );
                 }
             }
         
@@ -7135,11 +7151,12 @@ void setMapObjectRaw( int inX, int inY, int inID ) {
         
         if( r != NULL ) {
 
+            tappedOutPrimaryHomeland = 
             runTapoutOperation( inX, inY, 
                                 r->limitX, r->limitY,
                                 r->gridSpacingX, r->gridSpacingY, 
                                 inID,
-                                playerHasHomeland );
+                                playerHasPrimaryHomeland );
             
             
             r->buildCount++;
@@ -7148,11 +7165,12 @@ void setMapObjectRaw( int inX, int inY, int inID ) {
                 r->buildCount >= r->buildCountLimit ) {
                 // hit limit!
                 // tapout a larger radius now
+                tappedOutPrimaryHomeland =
                 runTapoutOperation( inX, inY, 
                                     r->postBuildLimitX, r->postBuildLimitY,
                                     r->gridSpacingX, r->gridSpacingY, 
                                     inID, 
-                                    playerHasHomeland, true );
+                                    playerHasPrimaryHomeland, true );
                 }
             }
         
@@ -7182,7 +7200,8 @@ void setMapObjectRaw( int inX, int inY, int inID ) {
                                   t,
                                   false,
                                   // changed
-                                  true };
+                                  true,
+                                  tappedOutPrimaryHomeland };
                 homelands.push_back( newH );
                 }
             else if( h->expired ) {
